# colette

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc  .taplo.toml  Cargo.toml  Dockerfile  Dockerfile.web  LICENSE  Makefile.toml  biome.json  bun.lockb  config.example.toml  docker-compose.yml  eslint.config.js  init.sql  openapi.yaml  package-lock.json  package.json  schema.sql  tsconfig.app.json  tsconfig.node.json
apps/cloudflare/: Cargo.toml  Makefile.toml  package.json  wrangler.toml
apps/cloudflare/migrations/: 0001_initial_users.sql  0003_initial_bookmarks.sql  0004_initial_folders.sql  0004_initial_profile_feeds.sql  0005_initial_user_bookmarks.sql  0005_initial_user_feeds.sql  0006_initial_collections.sql  0006_initial_tags.sql  atlas.sum
apps/cloudflare/scripts/: reset.sql
apps/cloudflare/src/: downloader.rs  lib.rs
apps/dioxus/: Cargo.toml  Dioxus.toml  tailwind.css
apps/dioxus/assets/: tailwind.css
apps/dioxus/src/: login.rs  main.rs  register.rs
apps/leptos/: Cargo.toml  Dockerfile  package.json  tailwind.config.js
apps/leptos/src/: app.rs  lib.rs  main.rs
apps/server/: Cargo.toml  Makefile.toml  build.rs
apps/server/.sqlx/: query-01824945670297ed37f4f60f1909dbf21f0cd623c55f63ed03fc2df173ab2223.json  query-02c618e23c875efc4640da1fd42e1f95fddb1626e17e0373fd4b5c0ea4326cc8.json  query-06962dbbd647fe98448eacd5f0bd7b8f5e070211f510794e100515672ce63fc1.json  query-09c238abe3bd833a30b7eb3b47c28fe1f074183076c13c2a5e64deb0e74fdb9e.json  query-0d55b678dc222a5f16e548c31b8c04591773e025ec7db3d81ef5654d6a935b98.json  query-0e7eaacb0feb5df38fba9ff79d0bfeb69d65679a8e2e465e782d2880594907fe.json  query-10c82fe3c132a345436db881fac1f8133e848fc8c5c0279297f9212770a7a114.json  query-12e0d1d613255ba9a6b616a0aa43e5d1416781083e2e0196aab477532a93bf53.json  query-130d5daa3a8a0ef2957c5a2d3c61ee4b593c7c53e01f24de8d15a784eb468646.json  query-15fb59a0da710e362655dffd9dfc087da272fc89771dce12dbfcb77a9dc74a85.json  query-1636c16092ba45c20706cb4a7f80031cab88b329c513001240aefa4cf8ac62f5.json  query-16639525ce8e9ec7769cf307a84f08d415f5f94a85ac12f67d399ccdc516bbb7.json  query-17f2dd0dc6e596da0a8c799dc1622b27966dfe7aed72a43f91b39c9136880f42.json  query-1a45912cd94440489068bcf49f30f1704123a0890cc329cd1ff4defe8054c521.json  query-1c665ca4eef95a874982e3305d91cb6b72e0ace28e70da6d29153be0ee9124b5.json  query-1d50a73f56d2cfe611b896a8a9546793b6cb571a0ab31759261f98bab1c0eda9.json  query-1f81a44a7baa1f06b4f6b34ad1beb9eee0f3a2a69e04c9960017edb8810087c6.json  query-21e647d6b6be0bdaf8ec990d72c60b7581fbdb95b8e48acc6f163dcd4130300d.json  query-240ad7ab1d78b1218ce9b5d9ce729bd4aadef55f96a530d24848bc856cf31c7e.json  query-2513bfdaf675fd5bcc6efaf32283fa4eee2ee99ac053747a7a2f28b379441f0d.json  query-27d880c09cbf097c3bcae35bde68ea5c5c28a9235d5c47fdbd52afd8817f259b.json  query-283264de03bbc66a260d5047a39ccafa6561320314202f3908cab48b096bd86b.json  query-295c6403ce923bfc1940fd6bee14a18a3d8b1cd43628df95edcf259175c8ff82.json  query-2c505101d1953be9b78171459cefee7c2aff128553cf59c323463b977731a64c.json  query-326e00ac79a6eab9505894b74d67636fc03488cd7e4bb423cb5275c2efc7982a.json  query-36e8402e1d4f7df8ca75bf046d86cd7a5fb251f25db175514b17ea7580e228d6.json  query-3d69dc9ad8b0f9f82093f1c6bb451fd9b351f03ec5adcfb89c193144270468b4.json  query-3e6a3a33e040c3a8574690ede6385f7e9cce99ffa4ab594e55a932a8fc4c337a.json  query-42f899d7988f88992ed8e753e046e84358ea99004192bef3b8921f42b463fceb.json  query-44de420266fe821142e4d0b8c8ede6b7b25fe7400a71721a197f4e994a06df09.json  query-468362002fd6df91369e1482cf44e62bfa9d0b89eec37a06eac2000213b4c887.json  query-480e4d7f8d1d5f6976501fdd09d4413759108e4f321084db4227e50e2bf0dc3f.json  query-4eb7db66b593d1e694d65522896e7be66865721f9bbe373558a189d6e54736a8.json  query-5067d8b0e077bddad3d5d9f25ba57b1e4e4736e18f930228f917dc3ced648909.json  query-514c17df80205463c60800189eafd632ecb4270762b403e6d3090167d9d50393.json  query-51fa42027ff93e32ad63edda48ef4bb1d93b8fb736bb3ca1d06e7877b6f17541.json  query-54febc2291f0cd5d401ec6b072a4085b89e838ec7573a3c246857d52c44b6e24.json  query-56d6d645698633998b9058d9478336954950d466aca12e3b107a353d3de2f0c0.json  query-5768572a6a9fa6e3028497a891ac2687c1ab72d54d0aed2a81756a4cb1d52cb5.json  query-588c17de8f6af11bd71d7fa72024e35222854e2cddf0d7b4e095aaaea0ea7bd2.json  (+60 more)
apps/server/config/: default.toml
apps/server/migrations/: 0008_initial_smart_feed.sql  20250123042531_initial.sql  V0001__initial_users.sql  V0003__initial_feeds.sql  V0004__initial_bookmarks.sql  V0005__initial_folders.sql  V0005__initial_user_feeds.sql  V0006__initial_collections.sql  V0006__initial_profile_bookmarks.sql  V0006__initial_user_bookmarks.sql  V0006__initial_user_feeds.sql  V0007__initial_collections.sql  V0007__initial_tags.sql  V0008__initial_smart_feed.sql  atlas.sum
apps/server/src/: config.rs  main.rs  session.rs  worker.rs
crates/api/: Cargo.toml
crates/api/config/: development.toml
crates/api/src/: api.rs  app.rs  auth.rs  backup.rs  bookmark.rs  bookmarks.rs  collection.rs  collections.rs  common.rs  config.rs  entries.rs  error.rs  feed.rs  feed_entries.rs  feed_entry.rs  feeds.rs  folder.rs  lib.rs  library.rs  main.rs  pagination.rs  profile.rs  profiles.rs  session.rs  smart_feed.rs  tag.rs  tags.rs
crates/app/: Cargo.toml  tauri.conf.json
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/core/: Cargo.toml
crates/core/archival/: Cargo.toml
crates/core/crud/: Cargo.toml
crates/crud/: Cargo.toml
crates/db/: Cargo.toml
crates/handler/: Cargo.toml
crates/http/: Cargo.toml
crates/job/: Cargo.toml
crates/migration/: Cargo.toml
crates/migrations/: Cargo.toml
crates/plugins/: .gitignore  Cargo.toml
crates/postgres/: Cargo.toml
crates/queue/: Cargo.toml
crates/repository/: Cargo.toml
crates/scraper/: Cargo.toml
crates/server/: Cargo.toml
crates/session/: Cargo.toml
crates/sql/: Cargo.toml
crates/sqlite/: .gitignore  Cargo.toml
crates/storage/: Cargo.toml
crates/task/: Cargo.toml
crates/util/: Cargo.toml
crates/utils/: Cargo.toml
rs/: .gitignore  Cargo.toml
rs/docker/: Dockerfile  sqlite.Dockerfile
(+2651 files in other folders)
