[workspace]
members = [
  "apps/server",
  "crates/api",
  "crates/core/archival",
  "crates/core/authentication",
  "crates/common",
  "crates/core/crud",
  "crates/infra/crypto",
  "crates/feed",
  "crates/handler",
  "crates/infra/http",
  "crates/core/ingestion",
  "crates/job",
  "crates/infra/jwt",
  "crates/meta",
  "crates/netscape",
  "crates/infra/oidc",
  "crates/opml",
  "crates/plugins",
  "crates/infra/queue",
  "crates/infra/repository",
  "crates/infra/s3",
  "crates/scraper",
  "crates/infra/smtp",
  "crates/util",
]
resolver = "2"

[workspace.dependencies]
async-trait = { version = "0.1.85", default-features = false }
axum = { version = "0.8.1", default-features = false, features = [
  "http1",
  "json",
  "query",
  "macros",
] }
bytes = { version = "1.9.0", default-features = false }
chrono = { version = "0.4.39", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
colette-api.path = "crates/api"
colette-archival.path = "crates/core/archival"
colette-authentication.path = "crates/core/authentication"
colette-common.path = "crates/common"
colette-crud.path = "crates/core/crud"
colette-crypto.path = "crates/infra/crypto"
colette-feed.path = "crates/feed"
colette-handler.path = "crates/handler"
colette-http.path = "crates/infra/http"
colette-ingestion.path = "crates/core/ingestion"
colette-job.path = "crates/job"
colette-jwt.path = "crates/infra/jwt"
colette-meta.path = "crates/meta"
colette-netscape.path = "crates/netscape"
colette-oidc.path = "crates/infra/oidc"
colette-opml.path = "crates/opml"
colette-plugins.path = "crates/plugins"
colette-queue.path = "crates/infra/queue"
colette-repository.path = "crates/infra/repository"
colette-s3.path = "crates/infra/s3"
colette-scraper.path = "crates/scraper"
colette-smtp.path = "crates/infra/smtp"
colette-util.path = "crates/util"
email_address = { version = "0.2.9", default-features = false, features = [
  "serde_support",
] }
futures = { version = "0.3.31", default-features = false }
html5gum = { version = "0.7.0", default-features = false }
http = { version = "1.2.0", default-features = false }
http-body-util = { version = "0.1.2", default-features = false }
quick-xml = { version = "0.37.2", default-features = false }
reqwest = { version = "0.12.12", default-features = false, features = [
  "http2",
] }
scraper = { version = "0.23.1", default-features = false }
serde = { version = "1.0.217", default-features = false }
serde_json = { version = "1.0.135", default-features = false, features = [
  "std",
] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "chrono",
  "json",
  "macros",
  "postgres",
  "uuid",
] }
thiserror = { version = "2.0.11", default-features = false }
time = { version = "0.3.39", default-features = false, features = ["serde"] }
tokio = { version = "1.43.0", default-features = false, features = ["macros"] }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.2", default-features = false, features = [
  "cors",
  "trace",
] }
tracing = { version = "0.1.41", default-features = false }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
uuid = { version = "1.11.1", default-features = false, features = [
  "serde",
  "std",
  "v7",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
