[workspace]
members = [
  "crates/config",
  "crates/core",
  "crates/database",
  "crates/password",
  "crates/plugins",
  "crates/postgres",
  "crates/scraper",
  "crates/server",
  "crates/sqlite",
  "crates/tasks",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
colette-config.path = "crates/config"
colette-core.path = "crates/core"
colette-database.path = "crates/database"
colette-password.path = "crates/password"
colette-plugins.path = "crates/plugins"
colette-postgres.path = "crates/postgres"
colette-scraper.path = "crates/scraper"
colette-sqlite.path = "crates/sqlite"
colette-tasks.path = "crates/tasks"
futures = "0.3.30"
http = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
url = { version = "2.5.2", features = ["serde"] }
uuid = "1.10.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
