[workspace]
members = [
  "crates/config",
  "crates/core",
  "crates/database",
  "crates/password",
  "crates/plugins",
  "crates/postgres",
  "crates/scraper",
  "crates/server",
  "crates/sqlite",
  "crates/tasks",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
colette-config.path = "crates/config"
colette-core.path = "crates/core"
colette-database.path = "crates/database"
colette-password.path = "crates/password"
colette-plugins.path = "crates/plugins"
colette-postgres.path = "crates/postgres"
colette-scraper.path = "crates/scraper"
colette-sqlite.path = "crates/sqlite"
colette-tasks.path = "crates/tasks"
futures = "0.3.30"
http = "1.1.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = "1.10.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
