[package]
name = "colette-cloudflare"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
colette-api.workspace = true
colette-core.workspace = true
colette-netscape.workspace = true
colette-opml.workspace = true
colette-scraper.workspace = true
colette-sql = { workspace = true, features = ["cloudflare"] }
colette-util.workspace = true
console_error_panic_hook = { version = "0.1", default-features = false }
futures.workspace = true
reqwest.workspace = true
sea-query = { workspace = true, features = ["backend-sqlite"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = { version = "0.3", default-features = false, features = [
  "wasm-bindgen",
] }
tower.workspace = true
tower-sessions.workspace = true
tower-sessions-core.workspace = true
url.workspace = true
uuid.workspace = true
worker = { version = "0.4", default-features = false, features = [
  "axum",
  "d1",
  "http",
] }
