[package]
name = "colette-cloudflare"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-embed.workspace = true
bytes.workspace = true
colette-api.workspace = true
colette-backup.workspace = true
colette-core.workspace = true
colette-http.workspace = true
colette-plugins.workspace = true
colette-queue = { workspace = true, features = ["cloudflare"] }
colette-repository = { workspace = true, features = ["cloudflare"] }
colette-scraper.workspace = true
colette-session = { workspace = true, features = ["cloudflare"] }
colette-task.workspace = true
colette-util.workspace = true
console_error_panic_hook.workspace = true
rust-embed.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = { version = "0.3.37", default-features = false, features = [
  "wasm-bindgen",
] }
tower.workspace = true
tower-sessions.workspace = true
url.workspace = true
worker = { workspace = true, features = ["axum", "d1", "http", "queue"] }
