[package]
name = "colette-dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-alpha.1", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", default-features = false }
tailwind_fuse = { version = "0.3.2", default-features = false, features = [
  "tailwind_fuse_macro",
  "variant",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
