[package]
name = "colette-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-embed = { version = "0.1.0", default-features = false }
chrono.workspace = true
colette-api.workspace = true
colette-auth.workspace = true
colette-core.workspace = true
colette-http.workspace = true
colette-migration.workspace = true
colette-plugins.workspace = true
colette-queue.workspace = true
colette-repository.workspace = true
colette-storage.workspace = true
deadpool-postgres.workspace = true
dirs = { version = "6.0.0", default-features = false }
envy = { version = "0.4.2", default-features = false }
futures.workspace = true
refinery = { version = "0.8.16", default-features = false }
reqwest.workspace = true
rust-embed = { version = "8.5.0", default-features = false, features = [
  "interpolate-folder-path",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
torii.workspace = true
tower = { version = "0.5.2", default-features = false, features = [
  "buffer",
  "limit",
  "tracing",
] }
tower-http = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "ansi",
  "env-filter",
  "tracing-log",
] }
url.workspace = true
