[package]
name = "colette-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["tokio"] }
axum-embed = { version = "0.1.0", default-features = false }
chrono.workspace = true
colette-api.workspace = true
colette-core.workspace = true
colette-http.workspace = true
colette-job.workspace = true
colette-jwt.workspace = true
colette-oidc.workspace = true
colette-plugins.workspace = true
colette-queue.workspace = true
colette-repository.workspace = true
colette-s3.workspace = true
colette-scraper.workspace = true
config = { version = "0.15.11", default-features = false, features = ["toml"] }
cron = { version = "0.15.0", default-features = false }
futures.workspace = true
refinery = { version = "0.8.16", default-features = false }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rust-embed = { version = "8.5.0", default-features = false, features = [
  "interpolate-folder-path",
] }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "tls-rustls-ring-webpki",
] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tower = { workspace = true, features = ["buffer", "limit", "tracing"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "ansi",
  "env-filter",
  "tracing-log",
] }
url.workspace = true

[build-dependencies]
colette-api.workspace = true
