[package]
name = "colette-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-extra = { version = "0.10.0", default-features = false, features = [
  "cookie",
  "query",
  "tracing",
  "typed-header",
] }
bytes.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-http.workspace = true
colette-jwt.workspace = true
colette-oidc.workspace = true
colette-queue.workspace = true
colette-repository.workspace = true
colette-s3.workspace = true
colette-smtp.workspace = true
colette-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = { version = "3.12.0", default-features = false }
thiserror.workspace = true
time.workspace = true
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
utoipa = { version = "5.3.1", default-features = false, features = [
  "chrono",
  "macros",
  "preserve_order",
  "preserve_path_order",
  "url",
  "uuid",
  "yaml",
] }
utoipa-scalar = { version = "0.3.0", default-features = false, features = [
  "axum",
] }
uuid.workspace = true
