[package]
name = "colette-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.6", default-features = false }

[dependencies]
serde_json.workspace = true
serde.workspace = true
tauri = { version = "2.0.0-rc.6", default-features = false, features = [
  "wry",
  "compression",
] }
