[package]
name = "colette-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bon = { version = "3.4.0", default-features = false }
bytes.workspace = true
chrono.workspace = true
colette-http.workspace = true
colette-meta.workspace = true
colette-netscape.workspace = true
colette-opml.workspace = true
colette-queue.workspace = true
colette-scraper.workspace = true
colette-storage.workspace = true
colette-util.workspace = true
deadpool-postgres.workspace = true
deadpool-sqlite.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
image = { version = "0.25.5", default-features = false }
jsonwebtoken.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
url.workspace = true
urlencoding = { version = "2.1.3", default-features = false }
uuid.workspace = true
