[package]
name = "colette-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
colette-http.workspace = true
colette-jwt.workspace = true
colette-meta.workspace = true
colette-netscape.workspace = true
colette-oidc.workspace = true
colette-opml.workspace = true
colette-queue.workspace = true
colette-s3.workspace = true
colette-scraper.workspace = true
colette-smtp.workspace = true
colette-util.workspace = true
email_address.workspace = true
http.workspace = true
http-body-util.workspace = true
image = { version = "0.25.5", default-features = false }
rand = { version = "0.9.0", default-features = false, features = [
  "thread_rng",
] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
urlencoding = { version = "2.1.3", default-features = false }
uuid.workspace = true
