[package]
name = "colette-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
colette-scraper.workspace = true
colette-util.workspace = true
email_address.workspace = true
rand = { version = "0.9.0", default-features = false, features = [
  "thread_rng",
] }
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
