[package]
name = "colette-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
colette-authentication.workspace = true
colette-common.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
