[package]
name = "colette-db"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
futures.workspace = true
serde.workspace = true
sqlx = { version = "0.7", default-features = false, features = [
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "time",
  "uuid",
] }
time = { version = "0.3", default-features = false, features = ["serde"] }
uuid.workspace = true
