[package]
name = "colette-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-entities.workspace = true
colette-migrations.workspace = true
futures.workspace = true
sea-orm.workspace = true
serde.workspace = true
sqlx = { version = "0.8", default-features = false, features = [
  "json",
  "macros",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
uuid.workspace = true
