[package]
name = "colette-handler"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace = true
chrono.workspace = true
colette-archival.workspace = true
colette-authentication.workspace = true
colette-common.workspace = true
colette-crud.workspace = true
colette-crypto.workspace = true
colette-http.workspace = true
colette-ingestion.workspace = true
colette-jwt.workspace = true
colette-opml.workspace = true
colette-meta.workspace = true
colette-netscape.workspace = true
colette-oidc.workspace = true
colette-queue.workspace = true
colette-s3.workspace = true
colette-scraper.workspace = true
colette-smtp.workspace = true
colette-util.workspace = true
email_address.workspace = true
image = { version = "0.25.5", default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
