[package]
name = "colette-http"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { version = "1.6.0", default-features = false }
hyper-rustls.workspace = true
hyper-util.workspace = true
thiserror.workspace = true
url.workspace = true
