[package]
name = "colette-job"
version = "0.1.0"
edition = "2024"

[dependencies]
colette-core.workspace = true
colette-crud.workspace = true
colette-handler.workspace = true
colette-http.workspace = true
colette-queue.workspace = true
colette-repository.workspace = true
colette-s3.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
