[package]
name = "colette-migration"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "=1.1.0-rc.1", default-features = false, features = [
  "cli",
  "runtime-tokio",
] }
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }

[features]
default = ["postgres"]
postgres = ["sea-orm-migration/sqlx-postgres"]
sqlite = ["sea-orm-migration/sqlx-sqlite"]
