[package]
name = "colette-migration"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm-migration = { version = "=1.1.0-rc.2", default-features = false, features = [
  "cli",
  "runtime-tokio",
] }
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }
tokio.workspace = true

[features]
default = ["postgres"]
postgres = ["sea-orm-migration/sqlx-postgres"]
sqlite = ["sea-orm-migration/sqlx-sqlite"]
