[package]
name = "colette-migration"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
deadpool-postgres.workspace = true
deadpool-sqlite.workspace = true
refinery-core = { version = "0.8.16", default-features = false }
rusqlite.workspace = true
time.workspace = true
tokio-postgres.workspace = true
