[package]
name = "colette-migrations"
version = "0.1.0"
edition = "2021"

[lib]
name = "migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "1.0.0-rc.7", default-features = false, features = [
  "cli",
  "runtime-tokio",
  "sqlx-postgres",
  "sqlx-sqlite",
] }
