[package]
name = "colette-plugins"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
colette-http.workspace = true
colette-meta.workspace = true
colette-scraper.workspace = true
http.workspace = true
http-body-util.workspace = true
scraper.workspace = true
url.workspace = true
lazy-regex = { version = "3.4.1", default-features = false, features = [
  "lite",
] }
