[package]
name = "colette-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
colette-core.workspace = true
colette-netscape.workspace = true
colette-opml.workspace = true
colette-sql.workspace = true
futures.workspace = true
sea-query = { workspace = true, features = ["backend-postgres"] }
sea-query-binder = { workspace = true, features = ["sqlx-postgres"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
thiserror.workspace = true
tokio.workspace = true
tower-sessions-core.workspace = true
uuid.workspace = true
